--- a/apps/frontend/src/app/globals.css
+++ b/apps/frontend/src/app/globals.css
@@ -11,6 +11,7 @@
   --color-foreground: var(--foreground);
   --font-sans: var(--font-geist-sans);
   --font-mono: var(--font-geist-mono);
+  --font-heading: var(--font-permanent-marker);
   --color-sidebar-ring: var(--sidebar-ring);
   --color-sidebar-border: var(--sidebar-border);
   --color-sidebar-accent-foreground: var(--sidebar-accent-foreground);
@@ -44,6 +45,8 @@
   --radius-md: calc(var(--radius) - 2px);
   --radius-lg: var(--radius);
   --radius-xl: calc(var(--radius) + 4px);
+  --color-hotpink: var(--hotpink);
+  --color-neongreen: var(--neongreen);
 }
 
 :root {
@@ -78,7 +81,11 @@
   --sidebar-accent: oklch(0.967 0.001 286.375);
   --sidebar-accent-foreground: oklch(0.21 0.006 285.885);
   --sidebar-border: oklch(0.92 0.004 286.32);
-  --sidebar-ring: oklch(0.705 0.015 286.067);
+  --sidebar-ring: oklch(71.345% 0.01621 332.088);
+  --hotpink: oklch(
+    65.473% 0.27005 353.526 / 0.874
+  ); /* Adjust chroma/hue as desired */
+  --neongreen: oklch(85.21% 0.28007 143.575);
 }
 
 .dark {
@@ -113,6 +120,8 @@
   --sidebar-accent-foreground: oklch(0.985 0 0);
   --sidebar-border: oklch(1 0 0 / 10%);
   --sidebar-ring: oklch(0.552 0.016 285.938);
+  --hotpink: oklch(0.95 0.27 330);
+  --neongreen: oklch(0.98 0.29 140);
 }
 
 @layer base {
